--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,7 +1,7 @@
 name: AmongMiner
 version: 0.0.1
 author: Alexzvn
-main: dev.alexzvn.among.Miner
+main: dev.alexzvn.among.AmongMiner
 
 depend: [ProtocolLib]
 
